--- a/weather-forecast-frontend/package.json
+++ b/weather-forecast-frontend/package.json
@@ -12,9 +12,13 @@
     "core-js": "^3.6.4",
     "dotenv": "^8.2.0",
     "es6-promise": "^4.2.8",
+    "jquery": "^1.9.1",
+    "popper.js": "^1.16.0",
     "vue": "^2.6.11",
+    "vue-place-autocomplete": "^0.5.3",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.11",
+    "vuetify-google-autocomplete": "^2.0.1",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
