--- a/weather-forecast-frontend/package.json
+++ b/weather-forecast-frontend/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
     "dotenv": "^8.2.0",
     "es6-promise": "^4.2.8",
     "jquery": "^1.9.1",
     "popper.js": "^1.16.0",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.0",
     "vue-place-autocomplete": "^0.5.3",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.11",
